# Subcut

./: README.md  install.sh  uninstall.sh
Doptimal/: checkexec.py  data.py  logparser.py  optdesign.jl  runtest.sh
Doptimal/settings/: default.set  defaulta.set  defaultd.set  icutsa.set  icutsl.set  icutsla.set  icutsld.set  icutss.set  icutssa.set
Doptimal/solver/: CMakeLists.txt
Maxcut/: Algorithm.jl  README.md  data.py  logparser.py  logparser_bb.py  opt.txt  runtest.sh
Maxcut/settings/: icutsa.set  icutsd.set  icutsla.set
Maxcut/solver/: CMakeLists.txt
Multilinear/: logparser.py  logparser2.py  runtest.sh  scale.py  scaledbenchmark.tar.xz  scales.txt
Multilinear/benchmark/: autocorr_bern20-05.osil  autocorr_bern20-05.pip  autocorr_bern20-10.osil  autocorr_bern20-10.pip  autocorr_bern20-15.osil  autocorr_bern20-15.pip  autocorr_bern25-03.osil  autocorr_bern25-06.osil  autocorr_bern25-06.pip  autocorr_bern25-13.osil  autocorr_bern25-13.pip  autocorr_bern25-19.osil  autocorr_bern25-19.pip  autocorr_bern25-25.osil  autocorr_bern25-25.pip  autocorr_bern30-04.osil  autocorr_bern30-04.pip  autocorr_bern30-08.osil  autocorr_bern30-08.pip  autocorr_bern30-15.osil  autocorr_bern30-15.pip  autocorr_bern30-23.osil  autocorr_bern30-23.pip  autocorr_bern30-30.osil  (+59 more)
Multilinear/solver/: CMakeLists.txt
Multilinear/solver/src/: main.cpp  sepa_interlattice.cpp  sepa_interlattice.h  sepa_intersub.cpp  sepa_intersub.h  utility.cpp  utility.h
src_common/: main.cpp  sepa_interlattice.cpp  sepa_interlattice.h  sepa_intersub (copy).cpp  sepa_intersub.cpp  sepa_intersub.h
(+58 files in other folders)
